LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/Account_Requests__c.object-meta.xml
<CustomObject>
    <label>Account Requests</label>
    <nameField>
        <displayFormat>AR-{000}</displayFormat>
        <label>Client Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>