LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to Actual Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>