LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/fields/isNameChangeCompleted__c.field-meta.xml
<CustomField>
    <fullName>isNameChangeCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Name Change Completed</label>
    <type>Checkbox</type>
</CustomField>