LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/fields/New_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Client</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Account_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>