LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/fields/New_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Name__c</fullName>
    <formula>New_Client__r.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client Name</label>
    <type>Text</type>
</CustomField>