LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/fields/Proposed_Name_New_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Name_New_Name__c</fullName>
    <label>Proposed Name (New Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>