LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/fields/Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Reason_Description__c</fullName>
    <label>Reason (Description)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>