LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Request</relationshipName>
    <type>Lookup</type>
</CustomField>