LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name Change</fullName>
            </value>
            <value>
                <fullName>Greylist Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>