LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/listViews/C_M_Team_Queue_Account_Requests.listView-meta.xml
<ListView>
    <fullName>C_M_Team_Queue_Account_Requests</fullName>
    <filterScope>Queue</filterScope>
    <label>Markets Ecosystems Team Queue</label>
    <queue>C_M_Team_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>