LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/listViews/DS_Team_Account_Requests.listView-meta.xml
<ListView>
    <fullName>DS_Team_Account_Requests</fullName>
    <filterScope>Queue</filterScope>
    <label>DS Team</label>
    <queue>DS_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>