LinKreta_POC_Repository/force-app/main/default/objects/Account_Requests__c/listViews/Pending_for_DS_Approval_Name_Change.listView-meta.xml
<ListView>
    <fullName>Pending_for_DS_Approval_Name_Change</fullName>
    <columns>NAME</columns>
    <columns>Requested_Date_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Pending for DS Approval(Name Change)</label>
</ListView>